test-cases/final-dump/trait_impl_non_trait.wybe
# Verify an impl declaration rejects a target that is not a trait.

constructor my_type

impl int
